assets/css/style.css
@import url('https://fonts.googleapis.com/css?family=Allura|Montserrat:100,200,300,400,500,600,700,800,900|Muli:200,300,400,500,600,700,800,900&display=swap');

/* ------------------------------------------------------ Text/Font */

.header-banner--text {
    font-family: "Montserrat", sans-serif;
    font-weight: 200;
    font-size: 40px;
    word-spacing: -10px;
    letter-spacing: 5px;
}

.header-banner--photography-text {
    font-family: "Allura", sans-serif;
        letter-spacing: -1px;
}

a.nav-link {
    font-family: "Montserrat", sans-serif;
    font-size: 18px;
    letter-spacing: 2px;
    text-transform: lowercase;
}

.footer-text {
    font-family: "Montserrat", sans-serif;
    font-size: 18px;
    letter-spacing: 2px;
}

.selling-title {
    font-family: "Muli", sans-serif;
    font-size: 48px;
    word-spacing: -5px;
}

.bands-gigs-title,
.album-artwork-title,
.portraits-title {
    font-family: "Muli", sans-serif;
    font-size: 60px;
    word-spacing: -5px;
}

.selling-paragraph {
    font-family: "Montserrat", sans-serif;
    font-size: 24px;
    letter-spacing: 2px;
    word-spacing: 1px;
    font-weight: 100;
}

.blockquote.reviews-text {
    font-family: "Montserrat", sans-serif;
    font-size: 24px;
    letter-spacing: 2px;
    word-spacing: 1px;
    font-weight: 200;
}


/* ------------------------------------------------------ Color */

.header-banner--text {
   color:rgb(255, 255, 255);
}

.header-banner--text:hover {
    color: rgba(255,255,255,0.75);
    text-decoration: none;
}

.selling-title,
.selling-paragraph,
.bands-gigs-title,
.album-artwork-title,
.portraits-title {
    color: rgb(161, 163, 166)
}

.selling-paragraph,
.selling-title {
    background-color: rgba(0, 0, 0, 0.6)
}

.bg-box-titles {
    background-color: rgba(0, 0, 0, 0.6);
    line-height: 75px;
}

.reviews-bg {
 background-color: rgb(200, 200, 200);
}

.footer-bg {
    background-color:rgb(52, 58, 64);
}

.footer-copyright-text,
li.list-inline-item,
.footer-location-text {
    color: rgb(161, 163, 166)
}

li.list-inline-item:hover,
.footer-location-text:hover {
    color: rgba(255,255,255,0.75);
    text-decoration: none;
}
/* ------------------------------------------------------ Header */

.header-banner {
    background: url("../images/charlie.jpg") center 42% no-repeat;
    height: 200px;
    background-size: cover;
}

/* ------------------------------------------------------ Navbar */

nav.navbar {
    padding-right: 0;
    padding-left: 0;
}

.navbar-toggler {
    margin: 2px auto;
}

button.navbar-toggler {
    border: none;
}

button.navbar-toggler:focus {
    outline: none;
}

a.nav-link {
    margin-right: 20px;
    margin-left: 20px; 
}

/* ------------------------------------------------------ Home */

.selling-bg,
.bands-gigs-bg,
.portraits-bg,
.album-artwork-bg {
    margin-bottom: 0;
}

.selling-bg {
    background: url("../images/sinka-oneils.jpg") center top no-repeat fixed;
    min-height: 60vh;
    background-size: cover;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    display: flex;
    align-items: center;
}

.selling-paragraph {
    margin-bottom: 16px;
}

.selling-title {
    hyphens: none;
    margin-bottom: 0;
    margin-top: 16px;
}

@media (min-width: 768px) {
    .selling-paragraph {
        font-size: 36px;
    }
   .container-fluid.selling-bg {
        padding: 0 20%;
    }
    .selling-title {
        font-size: 60px;
    }
    .bands-gigs-title,
    .album-artwork-title,
    .portraits-title {
        font-size: 72px;
    }
}

@media (max-width: 576px) { 
    .selling-title {
        hyphens: manual;
    }
}

div.col-12 {
    padding-left: 0;
    padding-right: 0;
}

.bands-gigs-bg {
    background: url("../images/sinka-camden.jpg") right center no-repeat;
    min-height: 60vh;
    background-size: cover;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    justify-content: center;
    position: relative;
}

.album-artwork-bg {
    background: url("../images/islands.jpg") center bottom no-repeat;
    min-height: 60vh;
    background-size: cover;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
}
.portraits-bg {
    background: url("../images/katie.jpg") 46% 35% no-repeat;
    min-height: 60vh;
    background-size: cover;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
}

.bands-gigs-title,
.album-artwork-title,
.portraits-title {
    margin: 16px;
}

/* ------------------------------------------------------ Reviews */


.reviews-inner {
    display: flex;
    align-items: center;
    min-height: 60vh;
}

@media (min-width: 576px) { 
    .reviews-inner {
        min-height: 40vh;
    }
}

.reviews-text {
    padding: 0 12px;
}
.carousel-control-next {
    right: -10px;
}

.carousel-control-prev {
    left: -10px;
}
/* ------------------------------------------------------ Portfolio */

/* ------------------------------------------------------ About Me */

/* ------------------------------------------------------ Contact */

/* ------------------------------------------------------ Footer */

footer.container-fluid {
    padding: 16px 100px;
}

.footer-copyright-text {
    margin: 0;
}


.col-lg-6 ul.list-inline {
    margin-bottom: 0;
}

li.list-inline-item {
    padding: 0 8px;
}

@media (min-width: 992px) {
.copyright-text-col {
    margin-top: 16px;
}
}

@media (max-width: 992px) {
.copyright-text-col,
.social-links-col {
    margin-top: 12px;
}
}

